--- a/styles/main.css
+++ b/styles/main.css
@@ -227,6 +227,8 @@ button {
 }
 
 .rect-img {
+    min-width: 10em;
+    min-height: 10em;
     position: absolute;
     width: 100%;
     height: 100%;
